--- a/SandBox/CMakeLists.txt
+++ b/SandBox/CMakeLists.txt
@@ -5,7 +5,7 @@ project(SandBox)
 
 add_executable(SandBox src/SandBoxApp.cpp)
 target_include_directories(SandBox PRIVATE
-    ${CMAKE_SOURCE_DIR}/Minity/src/Minity
+    ${CMAKE_SOURCE_DIR}/Minity/src
 )
 
 target_link_libraries(SandBox
