--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.dbclient-js": "javascript",
-        "xiosbase": "cpp"
-    }
+        "xiosbase": "cpp",
+        "iostream": "cpp"
+    },
+    "editor.detectIndentation": false,
+    "editor.tabSize": 4,
 }
