--- a/Minity/CMakeLists.txt
+++ b/Minity/CMakeLists.txt
@@ -5,10 +5,17 @@ add_subdirectory(vendor/spdlog)
 
 
 # -------------- Minity ------------------------------
+add_definitions(-DMN_PLATFORM_WINDOWS)
+
 file(GLOB_RECURSE MINITY_SRC src/Minity/*.cpp)
 
 add_library(Minity SHARED
     ${MINITY_SRC}
+)
+
+target_precompile_headers(Minity
+    PUBLIC
+        src/pch.h
 )
 
 target_include_directories(Minity PUBLIC
