--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "unordered_set": "cpp"
     },
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
