--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 add_subdirectory(SandBox)
 add_subdirectory(Minity)
