--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = Minity/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
 	branch = v1.x
+[submodule "Minity/vendor/glfw"]
+	path = Minity/vendor/glfw
+	url = https://github.com/glfw/glfw.git
