--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,9 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "stdio.h": "c",
+        "gl.h": "c"
     },
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
