--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "Minity/vendor/glfw"]
 	path = Minity/vendor/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "Minity/vendor/imgui"]
+	path = Minity/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
