--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "Minity/vendor/imgui"]
 	path = Minity/vendor/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "Minity/vendor/glm"]
+	path = Minity/vendor/glm
+	url = https://github.com/g-truc/glm.git
